--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,6 @@
+<% if flash[:notice] %>
+  <p><%= flash[:notice] %></p>
+<% end %>
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
@@ -16,8 +19,8 @@
         <th>
           <strong>introduction</strong>
         </th>
-        <th class = "profile-name">
-          <strong><%=  %></strong>
+        <th class = "profile-introduction">
+          <strong><%= @user.introduction %></strong>
         </th>
       </br>
         <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
@@ -36,24 +39,21 @@
       <% end %>
     </div>
       <div class="col-lg-8">
-       <h1>Book detail</h1>
+       <h2>Book detail</h2>
 
 
         <table class="table table-striped">
-          <thead>
-            <tr>
-             <th></th>
-             <th>Title</th>
-             <th>Opinion</th>
-             <th colspan="3"></th>
-            </tr>
-          </thead>
+
           <tbody>
 
               <tr>
-               <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
-               <td><%= @book.title %></td>
-               <td><%= @book.body %></td>
+                <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+                 <%= link_to @user.name, user_path, class: 'nav-link text-blue' %>
+                </td>
+                 <td><%= link_to @book.title, book_path, class: 'nav-link text-blue' %></td>
+                 <td><%= @book.body %></td>
+                 <td><%= link_to "Edit",edit_book_path, class: 'nav-link text-blue' %></td>
+                 <td><%= link_to "Destroy",book_path, method: :delete, data: {confirm: "本当に消しますか？"} %></td>
               </tr>
 
           </tbody>
@@ -61,6 +61,3 @@
       </div>
     </div>
 </div>
-
-<br>
-<p id="notice"><%= notice %></p>
