--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div>
       <label for="inputIntroduction">Introduction</label>
-      <br><%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:""%>
+      <br><%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"説明"%>
     </div>
     <div>
       <%= f.submit "Update User" %>
