--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,33 @@
-<div class="container">  
-  <div class="row"> 
+<div class="container">
+  <div class="row">
     <div class="col-lg-4">
       <h2>User info</h2>
       <div class="profile-container">
        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
       <br>
-        <th>name</th>
-        <th class = "profile-name"></th>
+        <th>
+          <strong>name</strong>
+        </th>
+        <th class = "profile-name">
+          <strong><%= @user.name %></strong>
+        </th>
       </br>
       <br>
-        <th>introduction</th>
-        <th class = "profile-name"></th>
-      </br>
+        <th>
+          <strong>introduction</strong>
+        </th>
+        <th class = "profile-introduction">
+          <strong><%= @user.introduction %></strong>
+        </th>
+        </br>
         <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
       </div>
-    
+
 
       <h2>New book</h2>
 
       <%= form_with model: @book, local:true do |f| %>
-  
+
         <h4>Title</h4>
         <%= f.text_field :title %>
         <h4>Opinion</h4>
@@ -28,24 +36,23 @@
       <% end %>
     </div>
       <div class="col-lg-8">
-       <h1>Users</h1>
-    
+       <h2>Users</h2>
+
 
         <table class="table table-striped">
           <thead>
             <tr>
-             <th></th>
-             <th>Title</th>
-             <th>Opinion</th>
+             <th>image</th>
+             <th>name</th>
              <th colspan="3"></th>
             </tr>
           </thead>
           <tbody>
-            <% @users.each do |user| %>
+            <% @books.each do |book| %>
               <tr>
                <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
-               <td><%= user.title %></td>
-               <td><%= user.body %></td>
+               <td><%= @user.name%></td>
+               <td><%= link_to "show",user_path(@user), class: 'nav-link text-blue' %></td>
               </tr>
             <% end %>
           </tbody>
@@ -54,5 +61,4 @@
     </div>
 </div>
 
-<br>
-<p id="notice"><%= notice %></p>
+
