--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,5 @@
-<h2>User info</h2>
+<body>
+<h2>Editing Book</h2>
 <div>
    <%= form_with model:@book, local:true do |f| %>
     <div>
@@ -13,5 +14,14 @@
     <div>
       <%= f.submit "Update Book" %>
     </div>
+    <div>
+    <%= link_to "Show",book_path(@book.id) %>
+    |
+    <%= link_to "Back",books_path %>
+    </div>
    <% end %>
 </div>
+</body>
+<footer>
+  <p>CopyRight Infratop.inc</p>
+</footer>
