--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,22 +7,24 @@
       <h2>User info</h2>
       <div class="profile-container">
        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-      <br>
+      <tr>
         <th>
-          <strong>name</strong>
+          <br>
+            <strong>name</strong>
         </th>
         <th class = "profile-name">
           <strong><%= @user.name %></strong>
         </th>
-      </br>
-      <br>
+      </tr>
+      <tr>
         <th>
-          <strong>introduction</strong>
+          <br>
+            <strong>introduction</strong>
         </th>
         <th class = "profile-introduction">
           <strong><%= @user.introduction %></strong>
         </th>
-        </br>
+      </tr>
         <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
       </div>
 
@@ -45,17 +47,20 @@
         <table class="table table-striped">
           <thead>
             <tr>
-             <th></th>
-             <th>Title</th>
-             <th>Opinion</th>
-             <th colspan="3"></th>
+             <th class="col-md-1" id="books_index_nill"></th>
+             <th class="col-md-2" id="books_index_Title">Title</th>
+             <th class="col-md-3" id="books_index_Opinion">Opinion</th>
             </tr>
           </thead>
           <tbody>
             <% @books.each do |book| %>
               <tr>
-               <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
-               <td><%= book.title %></td>
+               <td><%= link_to user_path(@user.id) do %>
+                    <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+                　<% end %></td>
+               <td><%= link_to book_path(book.id) do %>
+                    <%= book.title %>
+                  <% end %></td>
                <td><%= book.body %></td>
               </tr>
             <% end %>
@@ -66,4 +71,4 @@
 </div>
 <footer>
   <p>CopyRight Infratop.inc</p>
-  </footer>
+</footer>
