--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,22 +7,24 @@
       <h2>User info</h2>
       <div class="profile-container">
        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-      <br>
+      <tr>
         <th>
-          <strong>name</strong>
+          <br>
+            <strong>name</strong>
         </th>
         <th class = "profile-name">
           <strong><%= @user.name %></strong>
         </th>
-      </br>
-      <br>
+      </tr>
+      <tr>
         <th>
-          <strong>introduction</strong>
+          <br>
+            <strong>introduction</strong>
         </th>
         <th class = "profile-introduction">
           <strong><%= @user.introduction %></strong>
         </th>
-      </br>
+      </tr>
         <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
       </div>
 
@@ -45,19 +47,31 @@
         <table class="table table-striped">
 
           <tbody>
-
               <tr>
-                <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
-                 <%= link_to @user.name, user_path, class: 'nav-link text-blue' %>
+                <td class="col-md-1" id="books_show_image">
+                  <%= link_to user_path(@user.id) do %>
+                    <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
+                　<% end %>
+                  <br>
+                  <%= link_to user_path(@user.id) do %>
+                    <%= @user.name %>
+                  <% end %>
+                  </br>
                 </td>
-                 <td><%= link_to @book.title, book_path, class: 'nav-link text-blue' %></td>
-                 <td><%= @book.body %></td>
-                 <td><%= link_to "Edit",edit_book_path, class: 'nav-link text-blue' %></td>
-                 <td><%= link_to "Destroy",book_path, method: :delete, data: {confirm: "本当に消しますか？"} %></td>
+                <td class="col-md-1" id="books_show_title">
+                  <%= link_to book_path(@book.id) do %>
+                    <%= @book.title %>
+                  <% end %>
+                </td>
+                <td class="col-md-2" id="books_show_body"><%= @book.body %></td>
+                <td class="col-md-2" id="books_show_Edit"><%= link_to "Edit",edit_book_path(@book.id) %></td>
+                <td class="col-md-2" id="books_show_Destroy"><%= link_to "Destroy",book_path(@book.id), method: :delete, data: {confirm: "本当に消しますか？"} %></td>
               </tr>
-
           </tbody>
         </table>
       </div>
     </div>
 </div>
+<footer>
+  <p>CopyRight Infratop.inc</p>
+</footer>
