--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -13,10 +13,10 @@
   <p>you can share and exchange your opinions , inpressions , and emotions</p>
   <p>about various books!</p>
   
-  <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+  <a class="btn btn-info col-4 mx-auto sign_in" href="/users/sign_in">Log in</a>
   
   
-  <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign Up</a>
+  <a class="btn btn-success col-4 mx-auto sign_up" href="/users/sign_up">Sign Up</a>
  </main>
  <footer>
   <p>CopyRight Infratop.inc</p>
