--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,57 +4,57 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"　>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body class="d-flex flex-column vh-100">
-    <header class="shadow-sm">
+    <header class="shadow-sm bg-dark text-white">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          
-          <a class="navbar-brand p-3" >
-            <%= link_to 'Bookers', root_path, class: 'nav-link text-dark' %>
-          </a>
+
+          <div class="navbar-brand p-8 ">
+            <%= link_to 'Bookers', root_path, class: 'nav-link text-white' %>
+          </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-    
-    
+            <ul class="navbar-nav ml-auto"　>
+
+
             <% if user_signed_in? %>
-      
+
             <li class="nav-item">
-              <%= link_to 'Home', user_path(current_user.id), class: 'nav-link text-dark' %>
+              <%= link_to 'Home', user_path(current_user.id), class: 'nav-link text-white' %>
             </li>
-      
+
             <li class="nav-item">
-              <%= link_to 'Users', users_path, class: 'nav-link text-dark' %>
+              <%= link_to 'Users', users_path, class: 'nav-link text-white' %>
             </li>
-      
+
             <li class="nav-item">
-              <%= link_to 'Books', books_path, class: 'nav-link text-dark' %>
+              <%= link_to 'Books', books_path, class: 'nav-link text-white' %>
             </li>
-      
+
             <li class="nav-item">
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+              <%= link_to "logout", destroy_user_session_path, method: :delete, class: 'nav-link text-white' %>
             </li>
-      
+
             <% else %>
             <li class="nav-item">
-              <%= link_to 'Home', root_path, class: 'nav-link text-dark' %>
+              <%= link_to 'Home', root_path, class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
-              <%= link_to 'About', root_path, class: 'nav-link text-dark' %>
+              <%= link_to 'About', '/about', class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
-              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
+              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
-              <%= link_to "login", new_user_session_path, class: 'nav-link text-dark' %>
+              <%= link_to "login", new_user_session_path, class: 'nav-link text-white' %>
             </li>
             <% end %>
             </ul>
