--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,11 @@
-<h2>User info</h2>
+<body><h2>User info</h2>
 <div>
    <%= form_with model:@user, local:true do |f| %>
     <div>
       <label for="inputName">Name</label>
       <br><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
     </div>
-      
+
     <div>
       <label for="inputImage">Image</label>
       <br><%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
@@ -19,3 +19,7 @@
     </div>
    <% end %>
 </div>
+</body>
+<footer>
+  <p>CopyRight Infratop.inc</p>
+</footer>
