--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,22 +4,24 @@
       <h2>User info</h2>
       <div class="profile-container">
        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-      <br>
+      <tr>
         <th>
-          <strong>name</strong>
+          <br>
+            <strong>name</strong>
         </th>
         <th class = "profile-name">
           <strong><%= @user.name %></strong>
         </th>
-      </br>
-      <br>
+      </tr>
+      <tr>
         <th>
-          <strong>introduction</strong>
+          <br>
+            <strong>introduction</strong>
         </th>
         <th class = "profile-introduction">
           <strong><%= @user.introduction %></strong>
         </th>
-        </br>
+      </tr>
         <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
       </div>
 
@@ -42,9 +44,9 @@
         <table class="table table-striped">
           <thead>
             <tr>
-             <th>image</th>
-             <th>name</th>
-             <th colspan="3"></th>
+             <th class="col-md-2" id="users_index_image">image</th>
+             <th class="col-md-4" id="users_index_name">name</th>
+             <th class="col-md-2" id="users_index_nill"></th>
             </tr>
           </thead>
           <tbody>
@@ -52,7 +54,7 @@
               <tr>
                <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
                <td><%= @user.name%></td>
-               <td><%= link_to "show",user_path(@user), class: 'nav-link text-blue' %></td>
+               <td><%= link_to "show",user_path(@user.id) %></td>
               </tr>
             <% end %>
           </tbody>
@@ -60,5 +62,6 @@
       </div>
     </div>
 </div>
-
-
+<footer>
+  <p>CopyRight Infratop.inc</p>
+</footer>
