--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,31 @@
+<% if flash[:notice] %>
+  <p><%= flash[:notice] %></p>
+<% end %>
+
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
       <h2>User info</h2>
       <div class="profile-container">
        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-      <br>
+      <tr>
         <th>
-          <strong>name</strong>
+          <br>
+            <strong>name</strong>
         </th>
         <th class = "profile-name">
           <strong><%= @user.name %></strong>
         </th>
-      </br>
-      <br>
+      </tr>
+      <tr>
         <th>
+          <br>
           <strong>introduction</strong>
         </th>
         <th class = "profile-introduction">
           <strong><%= @user.introduction %></strong>
         </th>
-      </br>
+      </tr>
         <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
       </div>
 
@@ -42,17 +48,20 @@
         <table class="table table-striped">
           <thead>
             <tr>
-             <th></th>
-             <th>Title</th>
-             <th>Opinion</th>
-             <th colspan="3"></th>
+             <th class="col-md-2" id="users_show_nill"></th>
+             <th class="col-md-2" id="users_show_Title">Title</th>
+             <th class="col-md-3" id="users_show_Opinion">Opinion</th>
             </tr>
           </thead>
           <tbody>
             <% @books.each do |book| %>
               <tr>
-               <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
-               <td><%= link_to book.title,book_path, class: 'nav-link text-blue' %></td>
+                <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
+                <td>
+                  <%= link_to book_path(book.id) do %>
+                    <%= book.title %>
+                  <% end %>
+                </td>
                <td><%= book.body %></td>
               </tr>
             <% end %>
@@ -61,3 +70,6 @@
       </div>
     </div>
 </div>
+<footer>
+  <p>CopyRight Infratop.inc</p>
+</footer>
