--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,27 +1,57 @@
 <body>
-<h2>Editing Book</h2>
-<div>
-   <%= form_with model:@book, local:true do |f| %>
-    <div>
-      <label for="inputTitle">Titlee</label>
-      <br><%= f.text_field :title, autofocus: true, id:"inputTitle", placeholder:"タイトル"%>
-    </div>
+  <% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h3><%= @book.errors.count %>errors prohibited this obj from being saved:</h3><br>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+       <h2>Editing Book</h2>
+        <div>
+          <%= form_with model:@book, local:true do |f| %>
+           <div>
+             <div class="form-group">
+             <label for="inputTitle">Titlee</label>
+             <br><%= f.text_field :title, autofocus: true, id:"inputTitle"%>
+           </div>
+           </div>
 
-    <div>
-      <label for="inputbody">Opinion</label>
-      <br><%= f.text_area :body, placeholder: "本文" %>
+           <div>
+             <div class="form-group">
+             <label for="inputbody">Opinion</label>
+             <br><%= f.text_area :body %>
+             </div>
+           </div>
+
+           <div>
+              <div class="form-group">
+              <input type="submit" name="commit" value="Update Book" class="btn btn-success" data-disable-with="Update Book">
+            </div>
+            </div>
+            <div>
+            <%= link_to "Show",book_path(@book.id) %>
+            |
+            <%= link_to "Back",books_path %>
+            </div>
+           <% end %>
+        </div>
+
+      </div>
     </div>
-    <div>
-      <%= f.submit "Update Book" %>
-    </div>
-    <div>
-    <%= link_to "Show",book_path(@book.id) %>
-    |
-    <%= link_to "Back",books_path %>
-    </div>
-   <% end %>
-</div>
+  </div>
 </body>
 <footer>
-  <p>CopyRight Infratop.inc</p>
+  <div class="container mt-5">
+  	<div class="row">
+    	<div class="mx-auto">
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
 </footer>
