--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,11 +1,20 @@
-<head></head>
 
-<main>
-  <p>Welcome to 
-  <strong>Bookers</strong>
-  !</p>
-</main>
-
-<footer>
-  <p>CopyRight Infratop.inc</p>
-</footer>
+<body>
+  <main>
+    <p id="notice"></p>
+    <div class="container">
+      <div class="row">
+        <h1 class="px-3 mx-auto">Welcome to <i class="fas fa-book"></i><strong>Bookers</strong>!</h1>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="container mt-5">
+  	  <div class="row">
+    	  <div class="mx-auto">
+    		  <p>CopyRight Infratop.inc</p>
+    	  </div>
+      </div>
+    </div>
+  </footer>
+</body>
