--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,24 +1,34 @@
 <body>
- <header></header>
  <main>
-  <h1>welcome to
-   <strong>Bookers</strong>
-    !!
-  </h1>
-  <p>
-    In
-   <strong>Bookers</strong>
-    ,
-  </p>
-  <p>you can share and exchange your opinions , inpressions , and emotions</p>
-  <p>about various books!</p>
-  
-  <a class="btn btn-info col-4 mx-auto sign_in" href="/users/sign_in">Log in</a>
-  
-  
-  <a class="btn btn-success col-4 mx-auto sign_up" href="/users/sign_up">Sign Up</a>
+     <% if flash[:notice] %>
+      <p><%= flash[:notice] %></p>
+     <% end %>
+    <div class="container">
+        <div class="row">
+            <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+                <h1>welcome to <i class="fas fa-book"></i><strong>Bookers</strong>  !!</h1>
+                <p>In  <i class="fas fa-book"></i><strong>Bookers</strong>, </p>
+                <p>you can share and exchange  your opinions , inpressions , and emotions</p>
+                <p> about various books!</p>
+                <div class="btn-wrapper col-10 mx-auto">
+                    <div class="row">
+                      <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+                    </div>
+                    <div class="row">
+                      <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
  </main>
  <footer>
-  <p>CopyRight Infratop.inc</p>
+  <div class="container mt-5">
+  	<div class="row">
+    	<div class="mx-auto">
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
  </footer>
 </body>
