--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,52 @@
-<body><h2>User info</h2>
-<div>
-   <%= form_with model:@user, local:true do |f| %>
-    <div>
-      <label for="inputName">Name</label>
-      <br><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-    </div>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h2>User info</h2>
+          <% if @user.errors.any? %>
+            <div id="error_explanation">
+              <h3><%= @user.errors.count %>errors prohibited this obj from being saved:</h3>
+              <br>
+              <ul>
+                <% @user.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
 
-    <div>
-      <label for="inputImage">Image</label>
-      <br><%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+        <div>
+           <%= form_with model:@user, local:true do |f| %>
+            <div>
+              <label for="inputName">Name</label>
+              <br><%= f.text_field :name, autofocus: true, id:"inputName"%>
+            </div>
+
+            <div>
+              <label for="inputImage">Image</label>
+              <br><%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+            </div>
+            <div>
+              <label for="inputIntroduction">Introduction</label>
+              <br><%= f.text_area :introduction, autofocus: true, id:"inputIntroduction"%>
+            </div>
+            <div>
+              <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User">
+            </div>
+           <% end %>
+        </div>
+      </div>
     </div>
-    <div>
-      <label for="inputIntroduction">Introduction</label>
-      <br><%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"説明"%>
-    </div>
-    <div>
-      <%= f.submit "Update User" %>
-    </div>
-   <% end %>
-</div>
+  </div>
 </body>
+
 <footer>
-  <p>CopyRight Infratop.inc</p>
+  <div class="container mt-5">
+  	<div class="row">
+    	<div class="mx-auto">
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
 </footer>
+
