--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,67 +1,65 @@
-<div class="container">
+<div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-md-3">
       <h2>User info</h2>
       <div class="profile-container">
        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-      <tr>
-        <th>
-          <br>
-            <strong>name</strong>
-        </th>
-        <th class = "profile-name">
-          <strong><%= @user.name %></strong>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <br>
-            <strong>introduction</strong>
-        </th>
-        <th class = "profile-introduction">
-          <strong><%= @user.introduction %></strong>
-        </th>
-      </tr>
-        <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th>name</th>
+                        <th class = "profile-name"><%= @user.name %></th>
+                    </tr>
+                     <tr>
+                        <th>introduction</th>
+                        <th class = "profile-introduction"><%= @user.introduction %></th>
+                    </tr>
+                </tbody>
+            </table>
+        <div class="row">
+            <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas ' do %>
+                <i class="fas fa-user-cog"></i>
+            <% end %>
+        </div>
       </div>
-
-
       <h2>New book</h2>
-
       <%= form_with model: @book, local:true do |f| %>
-
         <h4>Title</h4>
         <%= f.text_field :title %>
         <h4>Opinion</h4>
         <%= f.text_area :body %>
-        <br><%= f.submit 'Create Book' %>
+        <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
       <% end %>
     </div>
-      <div class="col-lg-8">
-       <h2>Users</h2>
-
-
-        <table class="table table-striped">
-          <thead>
-            <tr>
-             <th class="col-md-2" id="users_index_image">image</th>
-             <th class="col-md-4" id="users_index_name">name</th>
-             <th class="col-md-2" id="users_index_nill"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @books.each do |book| %>
-              <tr>
-               <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
-               <td><%= @user.name%></td>
-               <td><%= link_to "show",user_path(@user.id) %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+      <div class="col-md-8 offset-md-1">
+        <h2>Users</h2>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                 <th>image</th>
+                 <th>name</th>
+                 <th colspan="3"></th>
+                </tr>
+                </thead>
+                <tbody>
+                    <% @users.each do |user| %>
+                        <tr>
+                            <td><%= attachment_image_tag user, :profile_image, size:"40x40", fallback: "no_image.jpg"%></td>
+                            <td><%= user.name%></td>
+                            <td><%= link_to "Show",user_path(user.id) %></td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
       </div>
     </div>
 </div>
 <footer>
-  <p>CopyRight Infratop.inc</p>
+  <div class="container mt-5">
+  	<div class="row">
+    	<div class="mx-auto">
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
 </footer>
