--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,68 +1,72 @@
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
-
-<div class="container">
+<div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-md-3">
       <h2>User info</h2>
+
+      <% if @book.errors.any? %>
+       <%= @book.errors.count %>errors prohibited this obj from being saved:<br>
+       <% @book.errors.full_messages.each do |message| %>
+        <%= message %>
+       <% end %>
+      <% end %>
+
       <div class="profile-container">
-       <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-      <tr>
-        <th>
-          <br>
-            <strong>name</strong>
-        </th>
-        <th class = "profile-name">
-          <strong><%= @user.name %></strong>
-        </th>
-      </tr>
-      <tr>
-        <th>
-          <br>
-          <strong>introduction</strong>
-        </th>
-        <th class = "profile-introduction">
-          <strong><%= @user.introduction %></strong>
-        </th>
-      </tr>
-        <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+         <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+        <table class="table">
+           <tbody>
+            <tr>
+              <th>name</th>
+              <th class = "profile-name"><%= @user.name %></th>
+            </tr>
+           <tr>
+              <th>introduction</th>
+              <th class = "profile-introduction"><%= @user.introduction %></th>
+            </tr>
+           </tbody>
+        </table>
+          <div class="row">
+            <%= link_to edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas ' do %>
+              <i class="fas fa-user-cog"></i>
+            <% end %>
+          </div>
       </div>
-
-
       <h2>New book</h2>
-
       <%= form_with model: @book, local:true do |f| %>
-
         <h4>Title</h4>
         <%= f.text_field :title %>
         <h4>Opinion</h4>
         <%= f.text_area :body %>
-        <br><%= f.submit 'Create Book' %>
+        <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
       <% end %>
     </div>
-      <div class="col-lg-8">
+      <div class="col-md-8 offset-md-1">
        <h2>Books</h2>
-
-
-        <table class="table table-striped">
+        <table class="table table-hover table-inverse">
           <thead>
             <tr>
-             <th class="col-md-2" id="users_show_nill"></th>
-             <th class="col-md-2" id="users_show_Title">Title</th>
-             <th class="col-md-3" id="users_show_Opinion">Opinion</th>
+             <th></th>
+             <th>Title</th>
+             <th>Opinion</th>
+             <th colspan="3"></th>
             </tr>
           </thead>
           <tbody>
             <% @books.each do |book| %>
               <tr>
-                <td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%></td>
+                <td>
+                  <%= link_to user_path(@user.id) do %>
+                    <%= attachment_image_tag @user, :profile_image, size:"40x40", fallback: "no_image.jpg"%>
+                  <% end %>
+                </td>
                 <td>
                   <%= link_to book_path(book.id) do %>
                     <%= book.title %>
                   <% end %>
                 </td>
-               <td><%= book.body %></td>
+                <td><%= book.body %></td>
               </tr>
             <% end %>
           </tbody>
@@ -71,5 +75,12 @@
     </div>
 </div>
 <footer>
-  <p>CopyRight Infratop.inc</p>
+  <div class="container mt-5">
+  	<div class="row">
+    	<div class="mx-auto">
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
 </footer>
+
